# brain-tumor-segmentation

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: original_colab.ipynb
scripts/: evaluate.py  train.py
src/brain_tumor_segmentation/: __init__.py  config.py  data.py  evaluate.py  metrics.py  viz.py  volume.py
src/brain_tumor_segmentation/models/: __init__.py  unet.py
